2014-04-24 Popup button is active while in check answers mode
2014-04-23 Fixed issue with incorrect glossary widget position for Glossary addon placed in header/footer
2014-04-22 Fixed issue with slow response of Connection addon
2014-04-22 Fixed issue with correct answer mark for drop-down gaps in Table addon
2014-04-22 Fixed bug with selected page number in Table of Contents addon
2014-04-18 Removed restrictions to URLs in External Link Button
2014-04-16 Added MathJax \blank{} macro for Text module, which can be used for creating gaps in Math Expressions
2014-04-16 New addons Clock and Swiffy Animation
2014-04-16 New gap type - drop-down in Table addon.
2014-04-16 Added Is Not Activity property to Graph addon.
2014-04-10 Fixed selecting issue in Text Selection module in adroid 4.2.2
2014-04-09 Fixed issue with boundaries detection in Shape Tracing addon on iOS7 devices
2014-04-08 Ordering is always shuffled
2014-04-08 Prevented adding class .hover to elements, when tapping on mobile devices in Text Selection module
2014-04-07 Fixed issue with scoring in Shape Tracing addon
2014-04-04 Fixed issue with NaN scores in hierarchical lesson report. Improvement to chapter names formatting.
2014-03-31 Fixed bug in calculating scores in hierarchical lesson report
2014-03-31 Added parseGaps command to JavaScriptPlayerServices
2014-03-31 Added global style, fixing android highlight when focus on HTML element, to the Player
2014-03-31 Fixed bug with disable/enable in Coloring module.
2014-03-28 Fixed problem with checking answers when not all gaps were filled in Basic Math Gaps module
2014-03-28 Player API extended to switch pages by page id
2014-03-27 New module Done, it checks whenever all activities on the page has been attempted and button Submit has been pressed, then it sends 'Done' event
2014-03-27 Fixed issue with improper total lesson scoring in hierarchical lesson report.
2014-03-27 Score is saved by page id instead of name.