@@ -1,3 +1,4 @@
+2014-04-30 Fixed issue with custom events improper behaviour in Advanced Connector
 2014-04-24 Popup button is active while in check answers mode
 2014-04-23 Fixed issue with incorrect glossary widget position for Glossary addon placed in header/footer
 2014-04-22 Fixed issue with slow response of Connection addon
